--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,79 @@
 
 ==============================================*/
 
-body {
+/*-----------------------------------------------------------------------------------*/
+/*  1 - GENERAL STYLING
+/*-----------------------------------------------------------------------------------*/
 
-font-family: 'Roboto Condensed', sans-serif;
-
+html, body {
+	height: 100%;
 }
 
+body {
+	font-family: 'Roboto Condensed', sans-serif;
+}
+
+h3 {
+	text-transform: uppercase;
+}
+
+/*-----------------------------------------------------------------------------------*/
+/*  1 - HOME
+/*-----------------------------------------------------------------------------------*/
+
+#home {
+	height: 100%;
+}
+
+#home-cover {
+	height: 100%;
+	background-image: url("../img/bg-home.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+
+#home-content-box {
+	width: 100%;
+	height: 100%;
+	display: table;
+}
+
+#home-content-box-inner {
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+}
+
+#home-heading h3 {
+	color: #fff;
+	font-size: 55px;
+	font-weight: 700;
+	margin: 20px 0;
+}
+
+/*-----------------------------------------------------------------------------------*/
+/*  1 - BUTTONS (Generic)
+/*-----------------------------------------------------------------------------------*/
+
+.btn-general {
+	border-width: 2px;
+	border-radius: 0;
+	padding: 12px 26px;
+	font-size: 16px;
+	font-weight: 400;
+	text-transform: uppercase;
+}
+
+.btn-white {
+	border-color: #fff;
+	color: #fff;
+}
+
+.btn-white:hover, .btn-white:focus {
+	background-color: #fff;
+	color: #41464b;
+}
 
 
 
