--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,6 @@ h3 {
 #home-cover {
 	height: 100%;
 	background-image: url("../img/bg-home.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
 }
 
 #home-content-box {
@@ -60,6 +57,17 @@ h3 {
 	font-size: 55px;
 	font-weight: 700;
 	margin: 20px 0;
+}
+
+/*-----------------------------------------------------------------------------------*/
+/*  1 - PARALLAX (Generic)
+/*-----------------------------------------------------------------------------------*/
+
+.bg-parallax {
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
 }
 
 /*-----------------------------------------------------------------------------------*/
