--- a/css/style.css
+++ b/css/style.css
@@ -93,5 +93,22 @@ h3 {
 	color: #41464b;
 }
 
+/*-----------------------------------------------------------------------------------*/
+/*  1 - ANIMATE
+/*-----------------------------------------------------------------------------------*/
 
+#home-cover, #home-heading, #home-btn {
+	animation-duration: .5s;
+}
 
+#home-cover {
+	animation-delay: .1s;
+}
+
+#home-heading {
+	animation-delay: .5s;
+}
+
+#home-btn {
+	animation-delay: 1s;
+}
