--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,13 @@ body {
 	font-family: 'Roboto Condensed', sans-serif;
 }
 
+p { color: #64707b; 
+	font-size: 16px;
+	font-weight: 300;
+}
+
 h3 {
+	color: #41464b;
 	text-transform: uppercase;
 }
 
@@ -111,4 +117,62 @@ h3 {
 
 #home-btn {
 	animation-delay: 1s;
+}
+
+/*-----------------------------------------------------------------------------------*/
+/*  1 - CONTENT (Generic)
+/*-----------------------------------------------------------------------------------*/
+
+.content-box {
+	padding: 60px 0;
+}
+
+.content-title h3 {
+	font-size: 30px;
+	font-weight: 700;
+	text-align: center;
+	margin-bottom: 30px;
+}
+
+.content-title-underline {
+	width: 30px;
+	height: 3px;
+	background-color: #34c6d3;
+	margin: 0 auto 30px auto;
+}
+
+/*-----------------------------------------------------------------------------------*/
+/*  1 - SERVICES
+/*-----------------------------------------------------------------------------------*/
+
+.service-item {
+	padding: 20px 0 20px 0;
+	margin-bottom: 20px;
+	cursor: pointer;
+}
+
+.service-item-icon i {
+	color: #34c6d3;
+	float: left;
+	padding: 15px;
+	margin-right: 25px;
+	width: 75px;
+	height: 75px;
+	text-align: center;
+}
+
+.service-item:hover .service-item-icon i {
+	color: #fff;
+	background-color: #34c6d3;
+}
+
+.service-item-title h3 {
+	font-size: 20px;
+	font-weight: 400;
+	margin: 0 0 10px 0;
+}
+
+.service-item-description p {
+	margin: 0;
+	padding-left: 85px;
 }
