--- a/css/style.css
+++ b/css/style.css
@@ -228,7 +228,26 @@ h3 {
 	margin-bottom: 30px;
 }
 
+/*-----------------------------------------------------------------------------------*/
+/*  1 - WORK
+/*-----------------------------------------------------------------------------------*/
 
+.row.no-gutters [class*=col-] {
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.img-wrapper {
+	overflow: hidden;
+}
+
+.img-wrapper img {
+	transition: transform .5s ease;
+}
+
+.img-wrapper img:hover {
+	transform: scale(1.5);
+}
 
 
 
