--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@
 /*  1 - GENERAL STYLING
 /*-----------------------------------------------------------------------------------*/
 
-html, body {
+html, 
+body {
 	height: 100%;
 }
 
@@ -94,7 +95,8 @@ h3 {
 	color: #fff;
 }
 
-.btn-white:hover, .btn-white:focus {
+.btn-white:hover, 
+.btn-white:focus {
 	background-color: #fff;
 	color: #41464b;
 }
@@ -104,7 +106,8 @@ h3 {
 	color: #34c6d3;
 }
 
-.btn-blue:hover, .btn-blue:focus {
+.btn-blue:hover, 
+.btn-blue:focus {
 	background-color: #34c6d3;
 	color: #fff;
 }
@@ -113,7 +116,9 @@ h3 {
 /*  1 - ANIMATE
 /*-----------------------------------------------------------------------------------*/
 
-#home-cover, #home-heading, #home-btn {
+#home-cover, 
+#home-heading, 
+#home-btn {
 	animation-duration: .5s;
 }
 
@@ -150,6 +155,11 @@ h3 {
 	background-color: #34c6d3;
 	margin: 0 auto 30px auto;
 }
+
+.content-title-white h3 {
+	color: #fff;
+}
+
 
 /*-----------------------------------------------------------------------------------*/
 /*  1 - SERVICES
@@ -305,4 +315,69 @@ h4.team-member-designation {
 
 .social-icon i:hover {
 	color: #34c6d3;
+}
+
+/*-----------------------------------------------------------------------------------*/
+/*  1 - TESTIMONIALS
+/*-----------------------------------------------------------------------------------*/
+
+#testimonials-cover {
+	background-image: url("../img/bg-testimonials.jpg");
+}
+
+#testimonials .content-box {
+	background-color: rgba( 0, 0, 0, 0.1);
+}
+
+#customers-testimonials {
+	padding: 50px 0;
+}
+
+.testimonial img {
+	max-width: 120px;
+	margin: 0 auto;
+}
+
+.testimonial blockquote {
+	border: 0;
+	font-family: Georgia, sans-serif;
+	font-style: italic;
+	color: #fff;
+	padding: 6px 150px;
+	position: relative;
+}
+
+.testimonial blockquote p {
+	color: #fff;
+}
+
+.testimonial blockquote::before, 
+.testimonial blockquote::after {
+	font-size: 80px;
+	font-style: normal;
+	line-height: 1;
+	width: 30px;
+	height: 30px;
+	position: absolute;
+}
+
+.testimonial blockquote::before {
+	content: "\201C";
+	top: 0;
+	left: 100px;
+}
+
+.testimonial blockquote::after {
+	content: "\201D";
+	bottom: 0;
+	right: 100px;
+}
+
+.testimonial-author p {
+	color: #fff;
+	font-size: 17px;
+}
+
+.testimonial-author p strong {
+	display: block;
 }
