--- a/css/style.css
+++ b/css/style.css
@@ -381,3 +381,66 @@ h4.team-member-designation {
 .testimonial-author p strong {
 	display: block;
 }
+
+/*-----------------------------------------------------------------------------------*/
+/*  1 - PRICING
+/*-----------------------------------------------------------------------------------*/
+
+.pricing-box {
+	border: 3px solid #34c6d3;
+	padding: 50px 0;
+	margin: 40px 0;
+}
+
+.pricing-box-lg {
+	padding: 90px 0;
+	margin: 0;
+	background-color: #34c6d3;
+}
+
+h4.pricing-title {
+	background-color: #34c6d3;
+	color: #fff;
+	display: inline-block;
+	padding: 7px 15px;
+	font-size: 14px;
+	font-weight: 700;
+	text-transform: uppercase;
+	margin: 0 0 30px 0;
+}
+
+h3.pricing-value {
+	font-size: 60px;
+	font-weight: 700;
+}
+
+h3.pricing-value sup {
+	font-size: 28px;
+	font-weight: normal;
+	vertical-align: super;
+}
+
+ul.pricing-spec {
+	list-style: none;
+	padding-left: 0;
+	margin: 20px 0 60px 0;
+}
+
+ul.pricing-spec li p {
+	font-weight: 400;
+	text-transform: uppercase;
+}
+
+.pricing-box-lg h4.pricing-title {
+	color: #34c6d3;
+	background-color: #fff;
+}
+
+.pricing-box-lg  ul.pricing-spec li p {
+	color: #fff;
+}
+
+
+
+
+
