--- a/css/style.css
+++ b/css/style.css
@@ -440,7 +440,37 @@ ul.pricing-spec li p {
 	color: #fff;
 }
 
+/*-----------------------------------------------------------------------------------*/
+/*  1 - STATS
+/*-----------------------------------------------------------------------------------*/
 
+#stats-cover {
+	background-image: url("../img/bg-stats.jpg");
+}
 
+#stats .content-box {
+	background-color: rgba( 0, 0, 0, .8);
+}
 
+.stats-item {
+	padding: 100px 0;
+}
+
+.stats-item i {
+	color: #34c6d3;
+}
+
+.stats-item h2 {
+	color: #fff;
+	font-size: 35px;
+	font-weight: 700;
+	margin: 15px 0 1px 0;
+}
+
+.stats-item p {
+	color: #fff;
+	text-transform: uppercase;
+	font-weight: 300;
+	margin-top: 0;
+}
 
