--- a/css/style.css
+++ b/css/style.css
@@ -474,3 +474,10 @@ ul.pricing-spec li p {
 	margin-top: 0;
 }
 
+/*-----------------------------------------------------------------------------------*/
+/*  1 - CLIENTS
+/*-----------------------------------------------------------------------------------*/
+
+.client {
+	padding: 40px 0px;
+}
