--- a/css/style.css
+++ b/css/style.css
@@ -578,3 +578,62 @@ form .form-control {
 	color: #34c6d3;
 }
 
+/*-----------------------------------------------------------------------------------*/
+/*  1 - NAVIGATION
+/*-----------------------------------------------------------------------------------*/
+
+.navbar {
+	padding: 20px 0;
+}
+
+.vesco-top-nav {
+	background: rgba(0, 0, 0, 0.7);
+	padding: 7px 0;
+}
+
+.vesco-nav-wrapper {
+	padding: 0 85px;
+}
+
+.navbar-nav {
+	float: right;
+}
+
+.navbar-nav > li > a {
+	color: #fff;
+	font-size: 15px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: 700;
+}
+
+.navbar-nav > li > a:hover,
+.navbar-nav > li > a:focus {
+	background: none;
+	color: #34c6d3;
+}
+
+.navbar-toggle {
+	background-color: rgba(0, 0, 0, 0.1);
+	border: 1px solid #fff;
+	border-radius: 0;
+}
+
+.navbar-toggle .icon-bar {
+	background: #fff;
+}
+
+.navbar-fixed-top .navbar-collapse {
+	max-height: none;
+}
+
+
+
+
+
+
+
+
+
+
+
