--- a/css/responsive.css
+++ b/css/responsive.css
@@ -27,10 +27,6 @@
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991px) {
 
-	h3 {
-		color: orange;
-	}
-
 	/* Mobile Menu */
 	.navbar {
 		background: : rgba(0, 0, 0, .7);
@@ -70,9 +66,112 @@
 
 /* Extra small devices (phones, less than 768px) */
 @media (max-width: 767px) {
+	/* Mobile Menu */
+	.navbar {
+		background: : rgba(0, 0, 0, .7);
+		padding: 0;
+	}
+	.navbar-nav {
+		float: left;
+	}
 
-	h3 {
-		color: green;
+	.vesco-nav-wrapper {
+		padding: 0;
+	}
+
+	/* Home */
+	#home-heading h3 {
+		font-size: 24px;
+	}
+
+	/* Buttons */
+	.btn-general {
+		padding: 6px 22px;
+		font-size: 14px;
+	}
+
+	/* About - remove diagonal border */
+	#about-bg-diagonal {
+		border-left: 0;
+		border-top: 0;
+		width: 100%;
+		height: 350px;
+	}
+
+	#about-content-box {
+		width: 100%;
+		height: 350px;
+	}
+
+	/* Work */
+	.img-wrapper img {
+		min-width: 100%;
+	}
+
+	/* Testimonials */
+	.testimonial blockquote {
+		padding: 6px 50px;
+	}
+
+	.testimonial blockquote:before {
+		left: 10px;
+	}
+	
+	.testimonial blockquote:after {
+		right:  10px;
+	}
+
+	.testimonial blockquote p {
+		font-size: 14px;
+	}
+
+	/* Stats */
+	.stats-item {
+		padding: 20px 0px;
+	}
+
+	/* Footer */
+	#footer-copyrights{
+		text-align: center;
+	}
+
+}
+
+@media (max-width: 480px) {
+	/* OK */
+}
+
+@media (max-width: 320px) {
+	/* Services */
+	.service-item-icon i {
+		width: 58px;
+		height: 58px;
+		padding: 7px;
+	}
+
+	.service-item-title h3{
+		font-size: 17px;
+	}
+
+	/* Abou t*/
+	#about-content-box {
+		margin-top: 40px;
+	}
+
+	/* Testimonials */
+	.testimonial img {
+		max-width: 80px;
+	}
+	.testimonial blockquote {
+		padding: 6px 30px;
+	}
+
+	.testimonial blockquote:before {
+		left: 7px;
+	}
+	
+	.testimonial blockquote:after {
+		right:  7px;
 	}
 
 }
