--- a/css/style.css
+++ b/css/style.css
@@ -528,6 +528,10 @@ address {
 	color: #fff;
 }
 
+address strong {
+	font-size: 16px;
+}
+
 address strong, 
 #phone-fax-email strong {
 	letter-spacing: 1px;
