--- a/css/style.css
+++ b/css/style.css
@@ -539,7 +539,7 @@ address strong,
 
 form .form-control {
 	background: transparent;
-	border border-radius: 0;
+	border-radius: 0;
 	border-color: #fff;
 	font-size: 17px;
 	font-weight: 300;
