--- a/css/responsive.css
+++ b/css/responsive.css
@@ -12,7 +12,7 @@
 
 	/* Mobile Menu */
 	.navbar {
-		background: : rgba(0, 0, 0, .7);
+		background: rgba(0, 0, 0, .7);
 		padding: 0;
 	}
 	.navbar-nav {
@@ -29,7 +29,7 @@
 
 	/* Mobile Menu */
 	.navbar {
-		background: : rgba(0, 0, 0, .7);
+		background: rgba(0, 0, 0, .7);
 		padding: 0;
 	}
 	.navbar-nav {
@@ -68,7 +68,7 @@
 @media (max-width: 767px) {
 	/* Mobile Menu */
 	.navbar {
-		background: : rgba(0, 0, 0, .7);
+		background: rgba(0, 0, 0, .7);
 		padding: 0;
 	}
 	.navbar-nav {
