--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,49 @@
-/*==============================================
+/*------------------------------------------------------------------
+
+    * Author: Sergi Marquez
+    * Author Profile: https://sergimarquez.com
+    * Description: Responsive Marketing Agency Template
+    * Version: 1.0
+    * License: GPL v2 or later
+
+-------------------------------------------------------------------*/
+
+/*------------------------------------------------------------------
 	DEFAULT VALUES:
 
-	Font Family: Roboto Condensed
+	* Font Family: Roboto Condensed
 
+	* Color Scheme
 	Greenish Blue: #34c6d3 (buttons, icons, links, lines, backgrounds)
 	Steel Gray: #41464b (headings)
 	Blue Bayoux: #64707b (paragraphs)
 	White: #fff (text with black background)
 	Black: #000 
 
-==============================================*/
+-------------------------------------------------------------------*/
+
+/*------------------------------------------------------------------
+
+    * 01. General Styling
+    * 02. Home  
+    * 03. Parallax 
+    * 04. Buttons 
+    * 05. Animate
+    * 06. Content
+    * 07. Services
+    * 08. About
+    * 09. Work
+    * 10. Team
+    * 11. Social
+    * 12. Testimonials
+    * 13. Pricing
+    * 14. Stats
+    * 15. Clients
+    * 16. Contact
+    * 17. Footer Copyright Menu
+    * 18. Navigation
+
+-------------------------------------------------------------------*/
 
 /*-----------------------------------------------------------------------------------*/
 /*  1 - GENERAL STYLING
@@ -35,7 +69,7 @@ h3 {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - HOME
+/*  2 - HOME
 /*-----------------------------------------------------------------------------------*/
 
 #home {
@@ -67,7 +101,7 @@ h3 {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - PARALLAX (Generic)
+/*  3 - PARALLAX 
 /*-----------------------------------------------------------------------------------*/
 
 .bg-parallax {
@@ -78,7 +112,7 @@ h3 {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - BUTTONS (Generic)
+/*  4 - BUTTONS 
 /*-----------------------------------------------------------------------------------*/
 
 .btn-general {
@@ -123,7 +157,7 @@ h3 {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - ANIMATE
+/*  5 - ANIMATE
 /*-----------------------------------------------------------------------------------*/
 
 #home-cover, 
@@ -149,7 +183,7 @@ h3 {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - CONTENT (Generic)
+/*  6 - CONTENT 
 /*-----------------------------------------------------------------------------------*/
 
 .content-box {
@@ -176,7 +210,7 @@ h3 {
 
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - SERVICES
+/*  7 - SERVICES
 /*-----------------------------------------------------------------------------------*/
 
 .service-item {
@@ -212,7 +246,7 @@ h3 {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - ABOUT
+/*  8 - ABOUT
 /*-----------------------------------------------------------------------------------*/
 
 #about-bg-diagonal {
@@ -253,7 +287,7 @@ h3 {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - WORK
+/*  9 - WORK
 /*-----------------------------------------------------------------------------------*/
 
 .row.no-gutters [class*=col-] {
@@ -282,7 +316,7 @@ h3 {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - TEAM
+/*  10 - TEAM
 /*-----------------------------------------------------------------------------------*/
 
 .team-member {
@@ -310,7 +344,7 @@ h4.team-member-designation {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - SOCIAL 
+/*  11 - SOCIAL 
 /*-----------------------------------------------------------------------------------*/
 
 .social-list {
@@ -343,7 +377,7 @@ h4.team-member-designation {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - TESTIMONIALS
+/*  12 - TESTIMONIALS
 /*-----------------------------------------------------------------------------------*/
 
 #testimonials-cover {
@@ -408,7 +442,7 @@ h4.team-member-designation {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - PRICING
+/*  13 - PRICING
 /*-----------------------------------------------------------------------------------*/
 
 .pricing-box {
@@ -466,7 +500,7 @@ ul.pricing-spec li p {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - STATS
+/*  14 - STATS
 /*-----------------------------------------------------------------------------------*/
 
 #stats-cover {
@@ -500,7 +534,7 @@ ul.pricing-spec li p {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - CLIENTS
+/*  15 - CLIENTS
 /*-----------------------------------------------------------------------------------*/
 
 .client {
@@ -508,7 +542,7 @@ ul.pricing-spec li p {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - CONTACT
+/*  16 - CONTACT
 /*-----------------------------------------------------------------------------------*/
 
 footer {
@@ -560,7 +594,7 @@ form .form-control {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - FOOTER COPYRIGHT MENU
+/*  17 - FOOTER COPYRIGHT MENU
 /*-----------------------------------------------------------------------------------*/
 
 #footer-bottom {
@@ -604,7 +638,7 @@ form .form-control {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  1 - NAVIGATION
+/*  18 - NAVIGATION
 /*-----------------------------------------------------------------------------------*/
 
 .navbar {
@@ -657,13 +691,3 @@ form .form-control {
 .vesco-top-nav ul.navbar-nav > li.active > a {
 	color: #34c6d3;
 }
-
-
-
-
-
-
-
-
-
-
